# Stochastic-gates-for-covariate-selection-in-population-pharmacokinetics-modelling-

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  README.md  pyproject.toml
data/high_iiv/: sim_df.csv  test.csv  train.csv
data/linearly_dependent/: col_types.json  test.csv  train.csv
data/low_frequency/: sim_df.csv  test.csv  train.csv
data/pop_100/: test.csv  train.csv
data/reference/: sim_df.csv  test.csv  train.csv
data/xor/: col_types.json  sim_df.csv  test.csv  train.csv
notebooks/: XGBoost_SHAP_analysis.ipynb  plotting.ipynb
scripts/: find_hyperparameters.py  run_lambdas_CV.py  run_train.py
src/stg_PopPK/: main_utils.py  models.py  stg.py  utils.py
