[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stg_PopPK"
version = "0.0.1"
description = "Modified STG package for covariate search only"
authors = [
  { name = "Marija Kekic" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "numpy==1.24.4",
    "ipykernel==6.29.0",
    "ipython==8.16.0",
    "joblib==1.3.1",
    "jupyter==1.0.0",
    "lifelines==0.27.8",
    "matplotlib==3.9.2",
    "pandas==2.2.2",
    "scikit-learn==1.5.1",
    "scipy==1.11.1",
    "seaborn==0.12.2",
    "shap==0.45.0",
    "torch==2.8.0",
    "torchaudio==2.0.2",
    "torchdiffeq==0.2.3",
    "torchvision==0.15.2",
    "optuna==4.0.0",
    "xgboost==2.1.4",
    "Sphinx==7.4.7",
    "black",
    "flake8",
    "loguru",
    "pip"]

requires-python = "~=3.9"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["stg"]
force_sort_within_sections = true